// Copyright 2020 James Fennell
//
// Transiter extensions for the GTFS-realtime protocol.
//
syntax = "proto2";

import "transiter-ny-mta-alerts-gtfs-rt-base.proto";

package transiter_ny_mta_alerts;

message StopTimeUpdateAdditionalData {
  optional string track = 1;

  extend TripUpdate.StopTimeUpdate {
    optional StopTimeUpdateAdditionalData additional_data = 1729;
  }
}

message AlertAdditionalData {
  optional uint64 created_at = 1;
  optional uint64 updated_at = 2;
  optional uint64 sort_order = 3;

  extend Alert {
    optional AlertAdditionalData additional_data = 1729;
  }
}